moment method used to add times to each timeblock on page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="container">
         <!-- Timeblocks go here -->
         <!--repeat these blocks to get a full day-->
-        <div id="hour-time" class="row text-align-end time-block">
-          <div id="currentHour" class="col-md-1 hour"><span>9 a.m.</span>
+        <div id="hour-time" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour"><span>9am</span>
           </div>
           <textarea class="col-md-10 description">
           </textarea>
