--- a/index.html
+++ b/index.html
@@ -21,14 +21,71 @@
       <div class="container">
         <!-- Timeblocks go here -->
         <!--repeat these blocks to get a full day-->
-        <div id="hour-time" class="row time-block">
-          <div id="currentHour" class="col-md-1 hour"><span>9am</span>
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
+        <div id="8" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">9am</div>
+          <textarea class="col-md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-      </div>
+        <div id="9" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">9am</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="10" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">10am</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="11" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">11am</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="12" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">12pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="13" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">1pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="14" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">2pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="15" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">3pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="16" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">4pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="17" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">5pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="18" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">6pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="19" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">7pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="20" class="row time-block">
+          <div id="currentHour" class="col-md-1 hour">8pm</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
